Refactor: Rename `toRequest` and `fromRequest` to `toRawRequest` and `fromRawRequest`, and update handlers accordingly
- Renamed conversion functions for both requests and responses across all endpoint classes for clarity and consistency.
- Updated `LanguageConverter` to use the new function names throughout.
- Adjusted test cases and serialization logic to align with the updated function definitions.