@@ -41,43 +41,43 @@ public interface DeletePet extends Wirespec.Endpoint {
     public static record Headers () implements Wirespec.Response.Headers {
     }
   }
-  public interface Handler extends Wirespec.Handler {
-    static public Wirespec.RawRequest toRequest(Wirespec.Serializer serialization, Request request) {
-      return new Wirespec.RawRequest(
-        request.method().name(),
-        java.util.List.of("pet", serialization.serializePath(request.path().petId(), Wirespec.getType(Long.class, null))),
+  static public Wirespec.RawRequest toRawRequest(Wirespec.Serializer serialization, Request request) {
+    return new Wirespec.RawRequest(
+      request.method().name(),
+      java.util.List.of("pet", serialization.serializePath(request.path().petId(), Wirespec.getType(Long.class, null))),
+      java.util.Collections.emptyMap(),
+      java.util.Map.ofEntries(java.util.Map.entry("api_key", serialization.serializeParam(request.headers().api_key(), Wirespec.getType(String.class, java.util.Optional.class)))),
+      null
+    );
+  }
+  static public Request fromRawRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
+    return new Request(
+      serialization.deserializePath(request.path().get(1), Wirespec.getType(Long.class, null)),
+      serialization.deserializeParam(request.headers().getOrDefault("api_key", java.util.Collections.emptyList()), Wirespec.getType(String.class, java.util.Optional.class))
+    );
+  }
+  static public Wirespec.RawResponse toRawResponse(Wirespec.Serializer serialization, Response<?> response) {
+    if (response instanceof Response400 r) {
+      return new Wirespec.RawResponse(
+        r.status(),
         java.util.Collections.emptyMap(),
-        java.util.Map.ofEntries(java.util.Map.entry("api_key", serialization.serializeParam(request.headers().api_key(), Wirespec.getType(String.class, java.util.Optional.class)))),
         null
       );
+    } else {
+      throw new IllegalStateException(("Cannot match response with status: " + response.status()));
     }
-    static public Request fromRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
-      return new Request(
-        serialization.deserializePath(request.path().get(1), Wirespec.getType(Long.class, null)),
-        serialization.deserializeParam(request.headers().getOrDefault("api_key", java.util.Collections.emptyList()), Wirespec.getType(String.class, java.util.Optional.class))
-      );
+  }
+  static public Response<?> fromRawResponse(Wirespec.Deserializer serialization, Wirespec.RawResponse response) {
+    switch (response.statusCode()) {
+        case 400 -> {
+          return new Response400();
+        }
+        default -> {
+          throw new IllegalStateException(("Cannot match response with status: " + response.statusCode()));
+        }
     }
-    static public Wirespec.RawResponse toResponse(Wirespec.Serializer serialization, Response<?> response) {
-      if (response instanceof Response400 r) {
-        return new Wirespec.RawResponse(
-          r.status(),
-          java.util.Collections.emptyMap(),
-          null
-        );
-      } else {
-        throw new IllegalStateException(("Cannot match response with status: " + response.status()));
-      }
-    }
-    static public Response<?> fromResponse(Wirespec.Deserializer serialization, Wirespec.RawResponse response) {
-      switch (response.statusCode()) {
-          case 400 -> {
-            return new Response400();
-          }
-          default -> {
-            throw new IllegalStateException(("Cannot match response with status: " + response.statusCode()));
-          }
-      }
-    }
+  }
+  public interface Handler extends Wirespec.Handler {
     @org.springframework.web.bind.annotation.DeleteMapping("/pet/{petId}")
         public java.util.concurrent.CompletableFuture<Response<?>> deletePet(Request request);
     public static record Handlers () implements Wirespec.Server<Request, Response<?>>, Wirespec.Client<Request, Response<?>> {
@@ -93,20 +93,20 @@ public interface DeletePet extends Wirespec.Endpoint {
       public Wirespec.ServerEdge<Request, Response<?>> getServer(Wirespec.Serialization serialization) {
         return new Wirespec.ServerEdge<>() {
         @Override public Request from(Wirespec.RawRequest request) {
-          return fromRequest(serialization, request);
+          return fromRawRequest(serialization, request);
         }
         @Override public Wirespec.RawResponse to(Response<?> response) {
-          return toResponse(serialization, response);
+          return toRawResponse(serialization, response);
         }};
       }
       @Override
       public Wirespec.ClientEdge<Request, Response<?>> getClient(Wirespec.Serialization serialization) {
         return new Wirespec.ClientEdge<>() {
         @Override public Wirespec.RawRequest to(Request request) {
-          return toRequest(serialization, request);
+          return toRawRequest(serialization, request);
         }
         @Override public Response<?> from(Wirespec.RawResponse response) {
-          return fromResponse(serialization, response);
+          return fromRawResponse(serialization, response);
         }};
       }
     }
