@@ -57,49 +57,49 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
     public static record Headers () implements Wirespec.Response.Headers {
     }
   }
-  public interface Handler extends Wirespec.Handler {
-    static public Wirespec.RawRequest toRequest(Wirespec.Serializer serialization, Request request) {
-      return new Wirespec.RawRequest(
-        request.method().name(),
-        java.util.List.of("pet", "findByStatus"),
-        java.util.Map.ofEntries(java.util.Map.entry("status", serialization.serializeParam(request.queries().status(), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class)))),
+  static public Wirespec.RawRequest toRawRequest(Wirespec.Serializer serialization, Request request) {
+    return new Wirespec.RawRequest(
+      request.method().name(),
+      java.util.List.of("pet", "findByStatus"),
+      java.util.Map.ofEntries(java.util.Map.entry("status", serialization.serializeParam(request.queries().status(), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class)))),
+      java.util.Collections.emptyMap(),
+      null
+    );
+  }
+  static public Request fromRawRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
+    return new Request(serialization.deserializeParam(request.queries().getOrDefault("status", java.util.Collections.emptyList()), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class)));
+  }
+  static public Wirespec.RawResponse toRawResponse(Wirespec.Serializer serialization, Response<?> response) {
+    if (response instanceof Response200 r) {
+      return new Wirespec.RawResponse(
+        r.status(),
+        java.util.Collections.emptyMap(),
+        serialization.serializeBody(r.body(), Wirespec.getType(Pet.class, java.util.List.class))
+      );
+    } else if (response instanceof Response400 r) {
+      return new Wirespec.RawResponse(
+        r.status(),
         java.util.Collections.emptyMap(),
         null
       );
+    } else {
+      throw new IllegalStateException(("Cannot match response with status: " + response.status()));
     }
-    static public Request fromRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
-      return new Request(serialization.deserializeParam(request.queries().getOrDefault("status", java.util.Collections.emptyList()), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class)));
+  }
+  static public Response<?> fromRawResponse(Wirespec.Deserializer serialization, Wirespec.RawResponse response) {
+    switch (response.statusCode()) {
+        case 200 -> {
+          return new Response200(serialization.deserializeBody(response.body(), Wirespec.getType(Pet.class, java.util.List.class)));
+        }
+        case 400 -> {
+          return new Response400();
+        }
+        default -> {
+          throw new IllegalStateException(("Cannot match response with status: " + response.statusCode()));
+        }
     }
-    static public Wirespec.RawResponse toResponse(Wirespec.Serializer serialization, Response<?> response) {
-      if (response instanceof Response200 r) {
-        return new Wirespec.RawResponse(
-          r.status(),
-          java.util.Collections.emptyMap(),
-          serialization.serializeBody(r.body(), Wirespec.getType(Pet.class, java.util.List.class))
-        );
-      } else if (response instanceof Response400 r) {
-        return new Wirespec.RawResponse(
-          r.status(),
-          java.util.Collections.emptyMap(),
-          null
-        );
-      } else {
-        throw new IllegalStateException(("Cannot match response with status: " + response.status()));
-      }
-    }
-    static public Response<?> fromResponse(Wirespec.Deserializer serialization, Wirespec.RawResponse response) {
-      switch (response.statusCode()) {
-          case 200 -> {
-            return new Response200(serialization.deserializeBody(response.body(), Wirespec.getType(Pet.class, java.util.List.class)));
-          }
-          case 400 -> {
-            return new Response400();
-          }
-          default -> {
-            throw new IllegalStateException(("Cannot match response with status: " + response.statusCode()));
-          }
-      }
-    }
+  }
+  public interface Handler extends Wirespec.Handler {
     @org.springframework.web.bind.annotation.GetMapping("/pet/findByStatus")
         public java.util.concurrent.CompletableFuture<Response<?>> findPetsByStatus(Request request);
     public static record Handlers () implements Wirespec.Server<Request, Response<?>>, Wirespec.Client<Request, Response<?>> {
@@ -115,20 +115,20 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
       public Wirespec.ServerEdge<Request, Response<?>> getServer(Wirespec.Serialization serialization) {
         return new Wirespec.ServerEdge<>() {
         @Override public Request from(Wirespec.RawRequest request) {
-          return fromRequest(serialization, request);
+          return fromRawRequest(serialization, request);
         }
         @Override public Wirespec.RawResponse to(Response<?> response) {
-          return toResponse(serialization, response);
+          return toRawResponse(serialization, response);
         }};
       }
       @Override
       public Wirespec.ClientEdge<Request, Response<?>> getClient(Wirespec.Serialization serialization) {
         return new Wirespec.ClientEdge<>() {
         @Override public Wirespec.RawRequest to(Request request) {
-          return toRequest(serialization, request);
+          return toRawRequest(serialization, request);
         }
         @Override public Response<?> from(Wirespec.RawResponse response) {
-          return fromResponse(serialization, response);
+          return fromRawResponse(serialization, response);
         }};
       }
     }
